[gd_scene load_steps=18 format=3 uid="uid://cqel5u2mt3uov"]

[ext_resource type="Script" path="res://scripts/main_scenes/game_scene/chunk.gd" id="1_s3kff"]
[ext_resource type="Texture2D" uid="uid://xu571uosd32e" path="res://assets/textures/animated/loading_wheel.png" id="2_pbm8a"]
[ext_resource type="Texture2D" uid="uid://dhf2mo4ihbknf" path="res://assets/textures/static/gridlines_2.png" id="3_4m4cn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a45j2"]
atlas = ExtResource("2_pbm8a")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gchu3"]
atlas = ExtResource("2_pbm8a")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_agse2"]
atlas = ExtResource("2_pbm8a")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4n4b"]
atlas = ExtResource("2_pbm8a")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8uew"]
atlas = ExtResource("2_pbm8a")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yrdj"]
atlas = ExtResource("2_pbm8a")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnndt"]
atlas = ExtResource("2_pbm8a")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhpda"]
atlas = ExtResource("2_pbm8a")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_sdxsx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a45j2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gchu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agse2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4n4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8uew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yrdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnndt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhpda")
}],
"loop": true,
"name": &"loading_wheel",
"speed": 12.0
}]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ri4ao"]
albedo_texture = ExtResource("3_4m4cn")
texture_filter = 2

[sub_resource type="PlaneMesh" id="PlaneMesh_5r63b"]
size = Vector2(16, 16)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gydsk"]
albedo_texture = ExtResource("3_4m4cn")
texture_filter = 2

[sub_resource type="PlaneMesh" id="PlaneMesh_2yjn6"]
flip_faces = true
size = Vector2(16, 16)
center_offset = Vector3(0, -2, 0)

[sub_resource type="BoxShape3D" id="BoxShape3D_un3c7"]
size = Vector3(16, 2, 16)

[node name="Chunk" type="StaticBody3D"]
script = ExtResource("1_s3kff")

[node name="LoadingWheel" type="AnimatedSprite3D" parent="."]
pixel_size = 0.05
billboard = 1
texture_filter = 2
sprite_frames = SubResource("SpriteFrames_sdxsx")
animation = &"loading_wheel"
autoplay = "loading_wheel"
frame_progress = 0.666556

[node name="EarlyTestingPlaneMeshTop" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_ri4ao")
mesh = SubResource("PlaneMesh_5r63b")

[node name="EarlyTestingPlaneMeshBottom" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_gydsk")
mesh = SubResource("PlaneMesh_2yjn6")

[node name="EarlyTestingPlaneCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
shape = SubResource("BoxShape3D_un3c7")
